# avtopaint

./: db.sqlite3  manage.py  pyproject.toml  requirement.txt
carpainting/: asgi.py  settings.py  urls.py  wsgi.py
main/: admin.py  forms.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20210420_2132.py  0003_auto_20210429_1107.py  0004_auto_20221207_1727.py  0005_auto_20221207_1751.py
main/static/css/: style.css
main/static/js/: script.js
main/templates/main/: index.html  testform.html
